Development Portal (2020-02-07 shi)
==============================
Update FAQ about narratives
Add wrappers for remaining elements
Display country-budget-items
Display other identifier
Display description for sector vocab
Update css for new SAVi
Display sector vocab url
Update sector layout and headers
Add chunks for empty description and percantage
Display recipient region vocab and description
Display capital spend
Update country-budget-items
Display conditions and legacy data
Add crs-add


Development Portal (2020-02-06 shi)
==============================
Update contact-info
Update comments
Add tag to new SAVi
Update css
Add related-activity
Add activity-status
Add json chunk for activity-status-back
Update json chunk with different colours


Development Portal (2020-02-05 shi)
==============================
Add contact-info and policy-marker new SAVi


Development Portal (2020-02-04 shi)
==============================
Add planned-disbursement new SAVi
Update css for transaction and budget tables
Add recipient-region new SAVi
Update debug page for new SAVi with more examples


Development Portal (2020-02-01 shi)
==============================
Update css for new SAVi dates


Development Portal (2020-01-31 shi)
==============================
Update text for projects ending soon
Update css for org file and projects ending soon list
Update new SAVi sections for when data is not found
Add all current SAVi elements


Development Portal (2020-01-30 shi)
==============================
Remove publisher-specific back button on general lists


Development Portal (2020-01-04 shi)
==============================
Update IATI Spend default year to 2017
Update footer text for how data is used


Development Portal (2019-12-09 shi)
==============================
Fix sector group and category icons and text
Fix dflat SAVi date div
Add glossary for Sector graphs


Development Portal (2019-11-21 shi)
==============================
Update all target_blank with noopener and noreferrer