@@ -1,3 +1,10 @@
+Development Portal (2020-02-08 shi)
+==============================
+Add crs-add
+Display crs-add elements
+Update css for new elements
+
+
 Development Portal (2020-02-07 shi)
 ==============================
 Update FAQ about narratives
@@ -13,7 +20,6 @@ Display recipient region vocab and description
 Display capital spend
 Update country-budget-items
 Display conditions and legacy data
-Add crs-add
 
 
 Development Portal (2020-02-06 shi)
